# flutter-monero

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  build.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: flutter-pub.yml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/lib/: main.dart  multisig.dart  multisig_page.dart  sync_wallet.dart  sync_wallet_paga.dart  sync_wallet_page.dart  test_form.dart  test_result.dart  test_runner.dart  transfer_page.dart  wallet.dart  wallet_accounts.dart  wallet_accounts_page.dart  wallet_management_page.dart  wallet_tests.dart
example/test/: wallet_manager_test.dart
ios/: monero_api.podspec  monero_app.podspec  monero_flutter.podspec
ios/Classes/: monero_api_link.cpp  monero_flutter.c  monero_flutter_link.cpp
lib/: account_api.dart  flutter_monero.dart  flutter_monero_bindings_generated.dart  monero_api.dart  monero_api_bindings_generated.dart  monero_ffi_bindings_generated.dart  monero_flutter.dart  monero_flutter_bindings_generated.dart  multisig_api.dart  sync_listener.dart  transaction_api.dart  wallet_manager_api.dart  wallet_sync_api.dart
lib/entities/: account_row.dart  create_transaction_request.dart  create_transaction_request.g.dart  create_transaction_response.dart  create_transaction_response.g.dart  describe_multisig_tx_request.dart  describe_multisig_tx_request.g.dart  describe_multisig_txs_request.dart  describe_multisig_txs_request.g.dart  describe_tx_request.dart  describe_tx_request.g.dart  describe_tx_response.dart  describe_tx_response.g.dart  describe_unsigned_tx_request.dart  describe_unsigned_tx_request.g.dart  error_info.dart  get_tx_request.dart  get_tx_request.g.dart  get_tx_response.dart  get_tx_response.g.dart  native_string_list.dart  outputs_request.dart  outputs_request.g.dart  outputs_response.dart  outputs_response.g.dart  pending_transaction.dart  simplified_transaction_report.dart  simplified_transaction_report.g.dart  simplified_transaction_request.dart  simplified_transaction_request.g.dart  subaddress_row.dart  sweep_unlocked_request.dart  sweep_unlocked_request.g.dart  sweep_unlocked_response.dart  transfer_info.dart  (+7 more)
macos/: flutter_monero.podspec  monero_api.podspec  monero_app.podspec  monero_flutter.podspec
src/: CMakeLists.txt  flutter_monero.cpp  flutter_monero.h  monero_api.cpp  monero_app.cpp  monero_ffi.h  monero_flutter.c  monero_flutter.cpp  monero_flutter.h  wallet2_api.h
(+19 files in other folders)
